2009-07-06  Raja R Harinath  <harinath@hurrynot.org>

	* DataBoundControlAdapterTest.cs (PerformDataBinding): Don't use
	'protected internal' when overriding a method from a different assembly.
	* HideDisabledControlAdapterTest.cs (RenderContents): Likewise.
	* HierarchicalDataBoundControlAdapterTest.cs (PerformDataBinding):
	Likewise.
	* MenuAdapterTest.cs (OnInit, OnPreRender, RaisePostBackEvent)
	(RenderContents): Likewise.
	* WebControlAdapterTest.cs (RenderContents): Likewise.

2008-10-17  Marek Habersack  <mhabersack@novell.com>

	* MenuAdapterTest.cs: work around event validation failure in the
	test environment.

2008-01-15  Dean Brettle <dean@brettle.com> 

	* MenuAdapterTest.cs: added

2008-01-13  Dean Brettle <dean@brettle.com> 

	* WebControlAdapterTest.cs, HierarchicalDataBoundControlAdapterTest.cs,
	DataBoundControlAdapterTest.cs, HideDisabledControlAdapterTest.cs: added